created separate sets for inner and outer states to find a correlation

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -1510,6 +1510,372 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Follow Up: Is there a correlation between inland states vs outer states (touching oceans)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>364276.0</td>\n",
+       "      <td>2018813.0</td>\n",
+       "      <td>5376</td>\n",
+       "      <td>2370499.0</td>\n",
+       "      <td>2977.0</td>\n",
+       "      <td>28248.0</td>\n",
+       "      <td>242</td>\n",
+       "      <td>462.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56382.0</td>\n",
+       "      <td>6431.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1341700.0</td>\n",
+       "      <td>23853346.0</td>\n",
+       "      <td>30075</td>\n",
+       "      <td>25195046.0</td>\n",
+       "      <td>10624.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>1040727.0</td>\n",
+       "      <td>6505237.0</td>\n",
+       "      <td>8175</td>\n",
+       "      <td>13083521.0</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>57185.0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19423.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>443822.0</td>\n",
+       "      <td>4032230.0</td>\n",
+       "      <td>1805</td>\n",
+       "      <td>4476052.0</td>\n",
+       "      <td>2829.0</td>\n",
+       "      <td>36039.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8971.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>394990.0</td>\n",
+       "      <td>5216286.0</td>\n",
+       "      <td>6438</td>\n",
+       "      <td>5611276.0</td>\n",
+       "      <td>2191.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>315979.0</td>\n",
+       "      <td>5347.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date state   positive    negative  positiveIncrease  \\\n",
+       "4  2020-12-06    AZ   364276.0   2018813.0              5376   \n",
+       "5  2020-12-06    CA  1341700.0  23853346.0             30075   \n",
+       "10 2020-12-06    FL  1040727.0   6505237.0              8175   \n",
+       "11 2020-12-06    GA   443822.0   4032230.0              1805   \n",
+       "30 2020-12-06    NC   394990.0   5216286.0              6438   \n",
+       "\n",
+       "    totalTestResults  hospitalizedCurrently  hospitalizedCumulative  \\\n",
+       "4          2370499.0                 2977.0                 28248.0   \n",
+       "5         25195046.0                10624.0                     NaN   \n",
+       "10        13083521.0                 4400.0                 57185.0   \n",
+       "11         4476052.0                 2829.0                 36039.0   \n",
+       "30         5611276.0                 2191.0                     NaN   \n",
+       "\n",
+       "    hospitalizedIncrease  onVentilatorCurrently  onVentilatorCumulative  \\\n",
+       "4                    242                  462.0                     NaN   \n",
+       "5                      0                    NaN                     NaN   \n",
+       "10                   145                    NaN                     NaN   \n",
+       "11                    38                    NaN                     NaN   \n",
+       "30                     0                    NaN                     NaN   \n",
+       "\n",
+       "    recovered  deathConfirmed  deathIncrease dataQualityGrade  \n",
+       "4     56382.0          6431.0             25               A+  \n",
+       "5         NaN             NaN             85                B  \n",
+       "10        NaN         19423.0             96                A  \n",
+       "11        NaN          8971.0             13               A+  \n",
+       "30   315979.0          5347.0             27               A+  "
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build two sets of states called inner and outer\n",
+    "\n",
+    "outer = covid[covid.state.isin([\"NC\", \"GA\", \"FL\", \"CA\", \"AZ\", \"OR\"])]\n",
+    "inner = covid[covid.state.isin([\"WY, UT\", \"CO\", \"KS\", \"NE\", \"IA\"])]\n",
+    "\n",
+    "outer.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>260581.0</td>\n",
+       "      <td>1608829.0</td>\n",
+       "      <td>3234</td>\n",
+       "      <td>3478160.0</td>\n",
+       "      <td>1750.0</td>\n",
+       "      <td>14868.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13941.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>213390.0</td>\n",
+       "      <td>885199.0</td>\n",
+       "      <td>1499</td>\n",
+       "      <td>1098589.0</td>\n",
+       "      <td>918.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>159063.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>168295.0</td>\n",
+       "      <td>676891.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>845186.0</td>\n",
+       "      <td>1143.0</td>\n",
+       "      <td>5417.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>409.0</td>\n",
+       "      <td>3615.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>138568.0</td>\n",
+       "      <td>631739.0</td>\n",
+       "      <td>2243</td>\n",
+       "      <td>1456368.0</td>\n",
+       "      <td>755.0</td>\n",
+       "      <td>4547.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69840.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2020-12-05</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>257347.0</td>\n",
+       "      <td>1574219.0</td>\n",
+       "      <td>5125</td>\n",
+       "      <td>3442114.0</td>\n",
+       "      <td>1812.0</td>\n",
+       "      <td>14844.0</td>\n",
+       "      <td>82</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13760.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date state  positive   negative  positiveIncrease  totalTestResults  \\\n",
+       "6  2020-12-06    CO  260581.0  1608829.0              3234         3478160.0   \n",
+       "14 2020-12-06    IA  213390.0   885199.0              1499         1098589.0   \n",
+       "18 2020-12-06    KS  168295.0   676891.0                 0          845186.0   \n",
+       "32 2020-12-06    NE  138568.0   631739.0              2243         1456368.0   \n",
+       "62 2020-12-05    CO  257347.0  1574219.0              5125         3442114.0   \n",
+       "\n",
+       "    hospitalizedCurrently  hospitalizedCumulative  hospitalizedIncrease  \\\n",
+       "6                  1750.0                 14868.0                    24   \n",
+       "14                  918.0                     NaN                     0   \n",
+       "18                 1143.0                  5417.0                     0   \n",
+       "32                  755.0                  4547.0                    41   \n",
+       "62                 1812.0                 14844.0                    82   \n",
+       "\n",
+       "    onVentilatorCurrently  onVentilatorCumulative  recovered  deathConfirmed  \\\n",
+       "6                     NaN                     NaN    13941.0             NaN   \n",
+       "14                  122.0                     NaN   159063.0             NaN   \n",
+       "18                  123.0                   409.0     3615.0             NaN   \n",
+       "32                    NaN                     NaN    69840.0             NaN   \n",
+       "62                    NaN                     NaN    13760.0             NaN   \n",
+       "\n",
+       "    deathIncrease dataQualityGrade  \n",
+       "6               0                A  \n",
+       "14             16               A+  \n",
+       "18              0               A+  \n",
+       "32              8                A  \n",
+       "62              0                A  "
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
