created next step in analysis, analyzing states with longer lockdown periods against shorter lockdown periods

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -11,12 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project focuses on data visualization to derive assumptions on coronavirus data. Inspired by current events."
+    "This project focuses on data visualization to derive assumptions on coronavirus data. Inspired by current events.  \n",
+    "NOTE: This analysis does not follow any specific path. I just attempted to answer questions the deeper and deeper I dove into the data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 385,
    "metadata": {
     "scrolled": false
    },
@@ -440,7 +441,7 @@
        "4             25               A+  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 386,
    "metadata": {
     "scrolled": true
    },
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 387,
    "metadata": {
     "scrolled": true
    },
@@ -645,7 +646,7 @@
        "4             25               A+  "
       ]
      },
-     "execution_count": 349,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,16 +666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc58fd02280>]"
+       "[<matplotlib.lines.Line2D at 0x7fc5756e5c70>]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -705,16 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc57202ca90>]"
+       "[<matplotlib.lines.Line2D at 0x7fc576b40f70>]"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +922,7 @@
        "229        NaN             NaN            113                B  "
       ]
      },
-     "execution_count": 352,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1216,7 @@
        "47  1030716.0             NaN             92                A  "
       ]
      },
-     "execution_count": 355,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1397,7 @@
        "64              2               A+  "
       ]
      },
-     "execution_count": 356,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1424,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1460,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1470,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1518,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1685,7 @@
        "30   315979.0          5347.0             27               A+  "
       ]
      },
-     "execution_count": 359,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1867,7 @@
        "62              0                A  "
       ]
      },
-     "execution_count": 360,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1887,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1911,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1921,7 @@
        "<AxesSubplot:xlabel='date', ylabel='positive'>"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1948,6 +1949,197 @@
    "metadata": {},
    "source": [
     "It seems that there isn't a direct relation between inner and outer states as their positive test results seem to vary primarily on population and not location. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Death Rates for States with longer periods of lockdowns\n",
+    "\n",
+    "According to [Ballotpedia](https://ballotpedia.org/States_that_issued_lockdown_and_stay-at-home_orders_in_response_to_the_coronavirus_(COVID-19)_pandemic,_2020), some states had extended periods of stay-at-home orders. For example, CA was in complete lockdown from March-December, NY from March - June, and New Mexico from March - November. Other states (like Nevada) had a lockdown period of approximately 1 month.  \n",
+    "\n",
+    "Im curious as to how the death rates looked throughout 2020 with these lockdowns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 404,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>positiveIncrease</th>\n",
+       "      <th>totalTestResults</th>\n",
+       "      <th>hospitalizedCurrently</th>\n",
+       "      <th>hospitalizedCumulative</th>\n",
+       "      <th>hospitalizedIncrease</th>\n",
+       "      <th>onVentilatorCurrently</th>\n",
+       "      <th>onVentilatorCumulative</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>deathConfirmed</th>\n",
+       "      <th>deathIncrease</th>\n",
+       "      <th>dataQualityGrade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1341700.0</td>\n",
+       "      <td>23853346.0</td>\n",
+       "      <td>30075</td>\n",
+       "      <td>25195046.0</td>\n",
+       "      <td>10624.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>168139.0</td>\n",
+       "      <td>853647.0</td>\n",
+       "      <td>2511</td>\n",
+       "      <td>1733263.0</td>\n",
+       "      <td>1789.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2020-12-05</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1311625.0</td>\n",
+       "      <td>23590350.0</td>\n",
+       "      <td>25068</td>\n",
+       "      <td>24901975.0</td>\n",
+       "      <td>10273.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>209</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>2020-12-05</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>165628.0</td>\n",
+       "      <td>849268.0</td>\n",
+       "      <td>3194</td>\n",
+       "      <td>1718547.0</td>\n",
+       "      <td>1789.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1286557.0</td>\n",
+       "      <td>23388921.0</td>\n",
+       "      <td>22018</td>\n",
+       "      <td>24675478.0</td>\n",
+       "      <td>9948.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>145</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date state   positive    negative  positiveIncrease  \\\n",
+       "5   2020-12-06    CA  1341700.0  23853346.0             30075   \n",
+       "36  2020-12-06    NV   168139.0    853647.0              2511   \n",
+       "61  2020-12-05    CA  1311625.0  23590350.0             25068   \n",
+       "92  2020-12-05    NV   165628.0    849268.0              3194   \n",
+       "117 2020-12-04    CA  1286557.0  23388921.0             22018   \n",
+       "\n",
+       "     totalTestResults  hospitalizedCurrently  hospitalizedCumulative  \\\n",
+       "5          25195046.0                10624.0                     NaN   \n",
+       "36          1733263.0                 1789.0                     NaN   \n",
+       "61         24901975.0                10273.0                     NaN   \n",
+       "92          1718547.0                 1789.0                     NaN   \n",
+       "117        24675478.0                 9948.0                     NaN   \n",
+       "\n",
+       "     hospitalizedIncrease  onVentilatorCurrently  onVentilatorCumulative  \\\n",
+       "5                       0                    NaN                     NaN   \n",
+       "36                      0                  214.0                     NaN   \n",
+       "61                      0                    NaN                     NaN   \n",
+       "92                      0                  214.0                     NaN   \n",
+       "117                     0                    NaN                     NaN   \n",
+       "\n",
+       "     recovered  deathConfirmed  deathIncrease dataQualityGrade  \n",
+       "5          NaN             NaN             85                B  \n",
+       "36         NaN             NaN             14                A  \n",
+       "61         NaN             NaN            209                B  \n",
+       "92         NaN             NaN             29                A  \n",
+       "117        NaN             NaN            145                B  "
+      ]
+     },
+     "execution_count": 404,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# California (longest lockdown) vs Nevada (shorter lockdown ~1 month)\n",
+    "\n",
+    "ca_vs_nv = covid[covid.state.isin([\"CA\", \"NV\"])]\n",
+    "ca_vs_nv.head()"
    ]
   },
   {
