added analysis to ca vs nv positive increase data visual

--- a/COVID-19 Analysis.ipynb
+++ b/COVID-19 Analysis.ipynb
@@ -2179,6 +2179,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preface: more analysis must be made however, we can conclude from these two states that...  \n",
+    "* the spikes in positive test cases are far less severe in NV than in CA\n",
+    "* Although the lockdown in NV lasted only a month (April-May), the increase in positive test cases hardly moved after the lockdown.\n",
+    "* Although CA was in a year-long lockdown, it's positive tests results had roller coaster-like volatility.   \n",
+    "\n",
+    "We can assume that:  \n",
+    "* Larger populated states are harder to prevent the spread of COVID (duh)\n",
+    "* Being in a lockdown did not really prove any prevention based on these two states"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
